--- a/Docker_Learn/tomcat/index.html
+++ b/Docker_Learn/tomcat/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Learning Ansible</title>
+<title>Learning Docker</title>
 
 <script language="JavaScript">
 var sizes = new Array (0,1,2,4,8,10,12);
@@ -26,8 +26,8 @@ function Elastic()
 
 <font color="green">This Web Server's devoted for {{ owner }}!<br>
 <font color="green"><h2>This page is geberated by</h2>
-<font color="gold"><h1 ID="elastic" align="Center" >ANSIBLE</h1>
-<font color="yellow"><h3 align="Center"> Эта страница создана мною в рамках обучения Ansible. При помощи Ansible в автоматичном режиме на серверах устанавливается веб сервис Apache, который является движком сайтов, автоматично стартует и ставится на автозагрузку. Далее код этой страницы копируется на те же сервера. Результат вы видите в эту минуту.</h3>
+<font color="gold"><h1 ID="elastic" align="Center" >DOCKER</h1>
+<font color="yellow"><h3 align="Center"> Эта страница создана мною в рамках обучения Docker. При помощи Docker в автоматичном режиме на серверах устанавливается веб сервис Apache, который является движком сайтов, автоматично стартует и ставится на автозагрузку. Далее код этой страницы копируется на те же сервера. Результат вы видите в эту минуту.</h3>
 		<font color="yellow"><h3 align="Center"> С Уважением, Ришат Мухтаров </h3>
                 <font color="orange"><h4 align="Center"> Hereby you can see a test webpage created by me - Rishat Mukhtarov - using JS language, and Apache web server service running it all along. All th code is delivered using Ansible onto three servers all differen from each other. Bye! </h4>
 
