--- a/Docker_Learn/tomcat/index.html
+++ b/Docker_Learn/tomcat/index.html
@@ -24,7 +24,7 @@ function Elastic()
 <br><br><br><br>
 <br><br><br><br>
 
-
+<font color="green">This Web Server is running on container %CONTAINER_NAME% !<br>
 
 <font color="gold"><h1 ID="elastic" align="Center" >DOCKER</h1>
 <font color="orange"><h4 align="Center"> Hereby you can see a test webpage created by me - Rishat Mukhtarov - using JS language, and Apache web server service running on Docker containers. Bye! </h4>
@@ -32,9 +32,9 @@ function Elastic()
 			<img src="AORS9875.JPG" width = 400 height = 240><img src="ASYT4311.JPG" width = 400 height = 240><br>
 			<img src="DSC09872.JPG" width = 400 height = 240><img src="FTDB5653.JPG" width = 400 height = 240><br>
                 <br>
-		Server Hostname - {{ serser_hostname }}<br>
+		Container Hostname - %container_hostname%<br>
 		Server OS Family - {{ os_family }}<br>
-		IP address of this server is - {{ ipv4_address }}<br>
+		IP address of this server is - %ipv4_address%<br>
 		Tech Lead is {{ main_owner }}<br>
 
 </body>
