--- a/Docker_Learn/tomcat/index.html
+++ b/Docker_Learn/tomcat/index.html
@@ -23,7 +23,7 @@ function Elastic()
 <center>
 <br><br><br><br>
 
-<font color="green">This Web Server is running on container %CONTAINER_NAME% !<br>
+<font color="green">This Web Server is running on %CONTAINER_NAME% !<br>
 
 <font color="gold"><h1 ID="elastic" align="Center" >DOCKER</h1>
 <font color="orange"><h4 align="Center"> Hereby you can see a test webpage created by me - %main_owner% - using JS language, and Apache web server service running on Docker containers. Bye! </h4>
